--- a/card.css
+++ b/card.css
@@ -69,6 +69,9 @@ ul {
   display: none;
 }
 
+.hide-answer {
+  
+}
 /* .bookmarked:hover {
   transform: scale(1.05);
 } only when used with a curser needed */
