--- a/css/profile.css
+++ b/css/profile.css
@@ -13,7 +13,7 @@
 }
 
 .profile-picture{
-  background-image: url(./assets/circle-user-dark.svg);
+  background-image: url("../assets/circle-user-dark.svg");
   background-size: cover;
   background-position: center;
   background-color: var(--light-background-color);
@@ -43,7 +43,7 @@
 }
 @media (prefers-color-scheme: dark){
     .profile-picture{
-        background-image: url(./assets/circle-user-white.svg);
+        background-image: url("../assets/circle-user-white.svg");
         background-color: var(--dark-color-background);
     }
 }
