--- a/css/nav.css
+++ b/css/nav.css
@@ -28,6 +28,7 @@ nav {
   height: 30px;
   display: inline-block;
   padding: 0;
+  background-color: transparent;
 }
 .home {
   background-image: url("../assets/home-dark.svg");
@@ -62,6 +63,3 @@ nav {
 }
 }
 
-.home:hover {
-  transform: scale(1.05);
-}
