--- a/css/newCard.css
+++ b/css/newCard.css
@@ -2,12 +2,12 @@
     
     display: flex;
     flex-direction: column;
-        border: 2px solid green;
+       /*  border: 2px solid green; */
 
 }
 
 label {
-    border: 2px solid red;
+/*     border: 2px solid red; */
     padding: 20px;
     font-weight: bold;
     padding-bottom: 5px;
@@ -20,20 +20,20 @@ label {
     width: 90%;
     align-self: center;
     height: 15vh;
-    border: 2px solid blue;
+/*     border: 2px solid blue; */
 
 }
 
 textarea {
-    border: 3px solid #831414;
+/*     border: 3px solid #831414; */
     border-radius: 4px;
     font-size: 16px;
     width: 100%;
     resize: vertical; /* Allows vertical resizing only */
 }
-textarea::placeholder{
+/* textarea::placeholder{
     color:rgb(255, 0, 179);
-}
+} */
 
 .input-tag {
     height: auto;
@@ -45,7 +45,7 @@ input:focus {
 }
 
 .submit-button {
-    border: 2px solid rgb(255, 0, 179);
+    /* border: 2px solid rgb(255, 0, 179); */
     width: 50%;
     align-self: center;
 
